# woody_woodpacker

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker_woody_wodpacker_build.sh  docker_woody_wodpacker_exec.sh  docker_woody_wodpacker_run.sh  export_docker_env.sh  objdump_diff.sh  readelf_diff.sh  setup_gdb.sh  test  test.c
includes/: defines.h  return_codes.h  woody.h
libft/: CMakeLists.txt  Makefile
libft/Includes/: get_next_line.h  libft.h  list.h
libft/Srcs/: free_2darr.c  ft_atoi.c  ft_bzero.c  ft_isdigit.c  ft_itoa.c  ft_memdup.c  ft_memmove.c  ft_memset.c  ft_strsplit.c  ft_tolower.c  get_next_line.c  list.c  t_list_clear.c  t_list_push_front.c
libft/Srcs/ft_printf/: ft_flags.c
old_src/: debug.c  elf_modification.c  libft_functions.c  main.c  utils.c  xxtea.c
src/: add_new_segment64.c  check_and_prepare.c  check_input_file.c  copy_segments.c  copy_segments64.c  elf_modification.c  find_symbol64.c  find_vaddr64.c  get_section64.c  handling.c  insert_loader64.c  insert_loader_int_the_end_of_segment64.c  insert_new_prog_hdr64.c  libft_functions.c  loader.asm  main.c  modify_elf64.c  move_segments64.c  offset_into_vaddr64.c  prepare_loader64.c  replace_note_segment_on_loader64.c  select_segment64.c  text_injection64.c  utils.c  xxtea_decrypt.c  xxtea_encrypt.c
